chore: Add TEMP_FILES/ to .gitignore
- Ignore temporary files directory and all contents
- Keeps repository clean from PR templates and temp documentation
- Follows standard .gitignore best practices

--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,8 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+##
+## Project-specific temporary files
+##
+TEMP_FILES/
