fix: performance test port configuration
- Use --urls parameter instead of ASPNETCORE_URLS environment variable
- launchSettings.json was overriding the environment variable
- App will now properly start on http://localhost:5000 for Lighthouse tests

--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -49,7 +49,7 @@ jobs:
         sleep 2
         
         # Start the app in background with specific port
-        ASPNETCORE_URLS="http://localhost:5000" dotnet run --configuration Release --no-build &
+        dotnet run --configuration Release --no-build --urls "http://localhost:5000" &
         APP_PID=$!
         
         # Wait for app to start
