--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -3,80 +3,118 @@
 
 # Components
 'component: TaskGrid':
-  - 'Components/TaskGrid/**/*'
-  - '**/*TaskGrid*'
+  - changed-files:
+    - any-glob-to-any-file: 'Components/TaskGrid/**/*'
+  - changed-files:
+    - any-glob-to-any-file: '**/*TaskGrid*'
 
 'component: TimelineView':
-  - 'Components/TimelineView/**/*'
-  - '**/*TimelineView*'
+  - changed-files:
+    - any-glob-to-any-file: 'Components/TimelineView/**/*'
+  - changed-files:
+    - any-glob-to-any-file: '**/*TimelineView*'
 
 'component: GanttComposer':
-  - 'Components/GanttComposer/**/*'
-  - '**/*GanttComposer*'
+  - changed-files:
+    - any-glob-to-any-file: 'Components/GanttComposer/**/*'
+  - changed-files:
+    - any-glob-to-any-file: '**/*GanttComposer*'
 
 # File types
 'type: model':
-  - 'Models/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Models/**/*'
 
 'type: service':
-  - 'Services/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Services/**/*'
 
 'type: page':
-  - 'Pages/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Pages/**/*'
 
 'type: style':
-  - '**/*.css'
-  - '**/*.scss'
+  - changed-files:
+    - any-glob-to-any-file: '**/*.css'
+  - changed-files:
+    - any-glob-to-any-file: '**/*.scss'
 
 'type: test':
-  - '**/*Test*'
-  - '**/*Tests*'
-  - '**/test/**/*'
-  - '**/tests/**/*'
+  - changed-files:
+    - any-glob-to-any-file: '**/*Test*'
+  - changed-files:
+    - any-glob-to-any-file: '**/*Tests*'
+  - changed-files:
+    - any-glob-to-any-file: '**/test/**/*'
+  - changed-files:
+    - any-glob-to-any-file: '**/tests/**/*'
 
 # Areas
 'area: documentation':
-  - '*.md'
-  - 'docs/**/*'
-  - '.github/**/*.md'
+  - changed-files:
+    - any-glob-to-any-file: '*.md'
+  - changed-files:
+    - any-glob-to-any-file: 'docs/**/*'
+  - changed-files:
+    - any-glob-to-any-file: '.github/**/*.md'
 
 'area: ci/cd':
-  - '.github/workflows/**/*'
-  - '.github/dependabot.yml'
+  - changed-files:
+    - any-glob-to-any-file: '.github/workflows/**/*'
+  - changed-files:
+    - any-glob-to-any-file: '.github/dependabot.yml'
 
 'area: configuration':
-  - '*.json'
-  - '*.xml'
-  - '*.config'
-  - '*.settings'
+  - changed-files:
+    - any-glob-to-any-file: '*.json'
+  - changed-files:
+    - any-glob-to-any-file: '*.xml'
+  - changed-files:
+    - any-glob-to-any-file: '*.config'
+  - changed-files:
+    - any-glob-to-any-file: '*.settings'
 
 # Phases (based on development plan)
 'phase: 1.1':
-  - 'Components/TaskGrid/**/*'
-  - 'Models/**/*'
-  - 'Services/GanttRowAlignmentService.cs'
+  - changed-files:
+    - any-glob-to-any-file: 'Components/TaskGrid/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Models/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Services/GanttRowAlignmentService.cs'
 
 'phase: 1.2':
-  - 'Components/TimelineView/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Components/TimelineView/**/*'
 
 'phase: 1.3':
-  - 'Components/GanttComposer/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Components/GanttComposer/**/*'
 
 # Priority
 'priority: high':
-  - 'Program.cs'
-  - 'Startup.cs'
-  - '**/*Security*'
+  - changed-files:
+    - any-glob-to-any-file: 'Program.cs'
+  - changed-files:
+    - any-glob-to-any-file: 'Startup.cs'
+  - changed-files:
+    - any-glob-to-any-file: '**/*Security*'
 
 'priority: medium':
-  - 'Pages/**/*'
-  - 'Components/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Pages/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Components/**/*'
 
 # Size indicators
 'size: small':
-  - '*.md'
-  - '**/*.css'
+  - changed-files:
+    - any-glob-to-any-file: '*.md'
+  - changed-files:
+    - any-glob-to-any-file: '**/*.css'
 
 'size: large':
-  - 'Components/**/*'
-  - 'Services/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Components/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Services/**/*'
