--- a/.github/workflows/feature-development.yml
+++ b/.github/workflows/feature-development.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 env:
   DOTNET_VERSION: '8.0.x'
 
