--- a/.github/workflows/feature-development.yml
+++ b/.github/workflows/feature-development.yml
@@ -178,20 +178,21 @@ jobs:
         echo "💬 Recent Commits:"
         git log --oneline -5
 
-  # Auto-labeling for PRs
-  auto-label:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Auto-label PR
-      uses: actions/labeler@v5
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        configuration-path: .github/labeler.yml
+  # Auto-labeling for PRs (disabled due to label creation permissions)
+  # auto-label:
+  #   runs-on: ubuntu-latest
+  #   if: github.event_name == 'pull_request'
+  #   
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v4
+  #   
+  #   - name: Auto-label PR
+  #     uses: actions/labeler@v5
+  #     with:
+  #       repo-token: ${{ secrets.GITHUB_TOKEN }}
+  #       configuration-path: .github/labeler.yml
+  #       sync-labels: false
 
   # Development metrics
   dev-metrics:
