--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,82 +1,46 @@
 # Automatic PR labeling configuration
 # Labels PRs based on which files are changed
+# Using common labels that typically exist in repositories
 
-# Components
-'component: TaskGrid':
-  - 'Components/TaskGrid/**/*'
-  - '**/*TaskGrid*'
+# Basic file type labels
+'documentation':
+  - changed-files:
+    - any-glob-to-any-file: '*.md'
+  - changed-files:
+    - any-glob-to-any-file: 'docs/**/*'
+  - changed-files:
+    - any-glob-to-any-file: '.github/**/*.md'
 
-'component: TimelineView':
-  - 'Components/TimelineView/**/*'
-  - '**/*TimelineView*'
+'enhancement':
+  - changed-files:
+    - any-glob-to-any-file: 'Components/**/*'
+  - changed-files:
+    - any-glob-to-any-file: 'Services/**/*'
 
-'component: GanttComposer':
-  - 'Components/GanttComposer/**/*'
-  - '**/*GanttComposer*'
+'dependencies':
+  - changed-files:
+    - any-glob-to-any-file: '*.csproj'
+  - changed-files:
+    - any-glob-to-any-file: 'packages.lock.json'
 
-# File types
-'type: model':
-  - 'Models/**/*'
+'ci':
+  - changed-files:
+    - any-glob-to-any-file: '.github/workflows/**/*'
+  - changed-files:
+    - any-glob-to-any-file: '.github/dependabot.yml'
 
-'type: service':
-  - 'Services/**/*'
+'configuration':
+  - changed-files:
+    - any-glob-to-any-file: '*.json'
+  - changed-files:
+    - any-glob-to-any-file: '*.config'
+  - changed-files:
+    - any-glob-to-any-file: '*.settings'
 
-'type: page':
-  - 'Pages/**/*'
-
-'type: style':
-  - '**/*.css'
-  - '**/*.scss'
-
-'type: test':
-  - '**/*Test*'
-  - '**/*Tests*'
-  - '**/test/**/*'
-  - '**/tests/**/*'
-
-# Areas
-'area: documentation':
-  - '*.md'
-  - 'docs/**/*'
-  - '.github/**/*.md'
-
-'area: ci/cd':
-  - '.github/workflows/**/*'
-  - '.github/dependabot.yml'
-
-'area: configuration':
-  - '*.json'
-  - '*.xml'
-  - '*.config'
-  - '*.settings'
-
-# Phases (based on development plan)
-'phase: 1.1':
-  - 'Components/TaskGrid/**/*'
-  - 'Models/**/*'
-  - 'Services/GanttRowAlignmentService.cs'
-
-'phase: 1.2':
-  - 'Components/TimelineView/**/*'
-
-'phase: 1.3':
-  - 'Components/GanttComposer/**/*'
-
-# Priority
-'priority: high':
-  - 'Program.cs'
-  - 'Startup.cs'
-  - '**/*Security*'
-
-'priority: medium':
-  - 'Pages/**/*'
-  - 'Components/**/*'
-
-# Size indicators
-'size: small':
-  - '*.md'
-  - '**/*.css'
-
-'size: large':
-  - 'Components/**/*'
-  - 'Services/**/*'
+'bug':
+  - changed-files:
+    - any-glob-to-any-file: '**/test/**/*'
+  - changed-files:
+    - any-glob-to-any-file: '**/*Test*'
+  - changed-files:
+    - any-glob-to-any-file: '**/*Fix*'
