--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,10 +1,10 @@
-name: CI/CD Pipeline v2
+name: CI/CD Pipeline
 
 on:
-  # Temporarily disabled to resolve phantom status check issue - timestamp update
-  # pull_request:
-  #   branches: [ main, master ]
-  workflow_dispatch:  # Manual trigger only
+  push:
+    branches: [ main, master, develop ]
+  pull_request:
+    branches: [ main, master ]
 
 env:
   DOTNET_VERSION: '8.0.x'
