chore: add local CI tasks for code formatting and pre-commit checks
- Add VS Code tasks for dotnet format (pre-commit) and format verification (CI check)
- Create LOCAL_CI_TASKS.md documentation with complete workflow guidance
- Format all code files to pass GitHub Actions formatting checks
- Add tasks.json with Format Code (Pre-commit) and Format and Verify (CI Check)
- Prevent CI failures by enabling local format verification before pushing

Tasks added:
- Format Code (Pre-commit): dotnet format --verbosity diagnostic
- Format and Verify (CI Check): dotnet format --verify-no-changes --verbosity diagnostic

This resolves the GitHub Actions formatting check failures by enabling developers
to format code locally before committing/pushing changes.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,6 +25,47 @@
 			"group": "build",
 			"isBackground": true,
 			"problemMatcher": []
+		},
+		{
+			"label": "Format Code (Pre-commit)",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"format",
+				"--verbosity",
+				"diagnostic"
+			],
+			"group": "build",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			},
+			"problemMatcher": "$msCompile"
+		},
+		{
+			"label": "Format and Verify (CI Check)",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"format",
+				"--verify-no-changes",
+				"--verbosity",
+				"diagnostic"
+			],
+			"group": "test",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			},
+			"problemMatcher": "$msCompile"
 		}
 	]
 }
